--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "license": "MIT",
   "dependencies": {
     "@expo/browser-polyfill": "^0.1.0",
+    "base64-arraybuffer": "^0.2.0",
     "expo-asset-utils": "^1.2.0"
   },
   "peerDependencies": {
@@ -55,6 +56,7 @@
   "devDependencies": {
     "@types/three": "^0.103.2",
     "@unimodules/core": "^5.0.0",
+    "eslint": "^6.8.0",
     "expo": "^37.0.0",
     "expo-asset": "^8.0.0",
     "expo-constants": "^8.0.0",
@@ -63,12 +65,11 @@
     "expo-module-scripts": "^1.2.0",
     "jest": "^25.1.0",
     "jest-expo": "^37.0.0",
+    "prettier": "^1.19.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/unstable/sdk-37.tar.gz",
     "react-native-web": "^0.11.0",
-    "eslint": "^6.8.0",
-    "prettier": "^1.19.1",
     "three": "^0.117.1"
   }
 }
